--- a/React_JS(Academind)/package.json
+++ b/React_JS(Academind)/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "npm run build",
     "build": "webpack -d && copy src\\index.html dist\\index.html && webpack-dev-server --content-base src\\ --inline --hot",
-    "build:prod": "webpack -p && copy src\\index.html dist\\index.html"
+    "build:prod": "webpack -p && copy src\\index.html dist\\index.html",
+    "test": "rc-autocomplete --src 'node_modules/react-toolbox/components/**/*.js'",
+    "generate": "rc-autocomplete"
   },
   "author": "me",
   "license": "MIT",
@@ -24,6 +26,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "react-autocomplete-cli": "0.0.3",
     "ts-loader": "^5.3.1"
   }
 }
